--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,3 +1,4 @@
+/*@import "compass/css3";*/
 /* line 316, ../sass/foundation/components/_global.scss */
 meta.foundation-version {
   font-family: "/5.3.0/";
@@ -1168,36 +1169,26 @@ ul.off-canvas-list li a:hover {
 }
 
 @font-face {
+  font-family: "OpenSansCn";
+  src: url(../fonts/OpenSans-CondLight.ttf);
+}
+
+@font-face {
   font-family: "OpenSans";
-  src: url(//is.byu.edu/site/resources/fonts/OpenSans-regular.ttf) format('truetype'), url(//is.byu.edu/site/resources/fonts/OpenSans-regular.ttf) format('truetype'), url(//is.byu.edu/site/resources/fonts/OpenSans-regular.ttf) format('truetype'), url(//is.byu.edu/site/resources/fonts/OpenSans-regular.ttf) format('truetype');
+  src: url(../fonts/opensans-light-webfont.woff);
 }
 
 @font-face {
-  font-family: "OpenSansLt";
-  src: url(//is.byu.edu/site/resources/fonts/opensans-light-webfont.ttf) format('truetype'), url(//is.byu.edu/site/resources/fonts/opensans-light-webfont.woff) format('woff'), url(//is.byu.edu/site/resources/fonts/opensans-light-webfont.eot) format('embedded-opentype'), url(//is.byu.edu/site/resources/fonts/opensans-light-webfont.svg) format('svg');
+  font-family: "Serveroff";
+  src: url(../fonts/Web_Serveroff.otf);
 }
 
-@font-face {
-  font-family: "OpenSansLt_IE";
-  src: url(//is.byu.edu/site/resources/fonts/opensans-light-webfont.ttf) format('truetype'), url(//is.byu.edu/site/resources/fonts/opensans-light-webfont.woff) format('woff'), url(//is.byu.edu/site/resources/fonts/opensans-light-webfont.eot) format('embedded-opentype'), url(//is.byu.edu/site/resources/fonts/opensans-light-webfont.svg) format('svg');
-}
-
-@font-face {
-  font-family: "OpenSansLtCn";
-  src: url(//is.byu.edu/site/resources/fonts/OpenSans-CondLight.ttf) format('truetype'), url('/stylesheets/fonts/examples/bgrove.otf') format('opentype');
-}
-
-@font-face {
-  font-family: "OpenSans_IE";
-  src: url(//is.byu.edu/site/resources/fonts/opensans-regular-webfont.eot) format('embedded-opentype'), url('/stylesheets/fonts/examples/bgrove.otf') format('opentype');
-}
-
-/* line 25, ../sass/index.scss */
+/* line 32, ../sass/index.scss */
 body {
   padding: 0;
   margin: 0;
   color: #464646;
-  font-family: "OpenSans", "OpenSans_IE";
+  font-family: "OpenSans";
   line-height: 1.5em;
 }
 
@@ -1221,25 +1212,25 @@ body {
     margin-right: 1px;
   }
 }*/
-/* line 54, ../sass/index.scss */
+/* line 61, ../sass/index.scss */
 .myTitle {
   padding-left: .5em;
   padding-top: 4px;
   padding-right: 1em;
 }
 
-/* line 60, ../sass/index.scss */
+/* line 67, ../sass/index.scss */
 .logo {
   max-height: 2.9em;
 }
 
-/* line 64, ../sass/index.scss */
+/* line 71, ../sass/index.scss */
 .stripe {
   position: relative;
   padding: 3em .769em;
 }
 
-/* line 69, ../sass/index.scss */
+/* line 76, ../sass/index.scss */
 .one {
   background: url("../img/scientist.jpg");
   background-position: 85% 0px;
@@ -1248,36 +1239,36 @@ body {
   background-repeat: no-repeat;
 }
 
-/* line 77, ../sass/index.scss */
+/* line 84, ../sass/index.scss */
 .two {
   min-height: 450px;
   padding-bottom: 1em;
 }
 
-/* line 82, ../sass/index.scss */
+/* line 89, ../sass/index.scss */
 .three {
   text-align: center;
   padding-top: 1.5em;
   padding-bottom: 1.5em;
 }
 
-/* line 91, ../sass/index.scss */
+/* line 98, ../sass/index.scss */
 .headtext {
   text-align: right;
   margin-right: 32.24px;
   margin-top: -2em;
 }
 
-/* line 97, ../sass/index.scss */
+/* line 104, ../sass/index.scss */
 .test {
   display: block;
   text-align: right;
 }
 
-/* line 103, ../sass/index.scss */
+/* line 110, ../sass/index.scss */
 .headh1 {
   font-size: 1.9em;
-  font-family: "OpenSans", "OpenSans_IE";
+  font-family: "OpenSans";
   text-align: left;
   min-width: 300px;
   max-width: 301px;
@@ -1288,10 +1279,10 @@ body {
   font-weight: 200;
 }
 
-/* line 115, ../sass/index.scss */
+/* line 122, ../sass/index.scss */
 .headh2 {
   font-size: 1.2em;
-  font-family: "OpenSans", "OpenSans_IE";
+  font-family: "OpenSans";
   text-align: left;
   min-width: 300px;
   max-width: 301px;
@@ -1302,14 +1293,14 @@ body {
   font-weight: 200;
 }
 
-/* line 128, ../sass/index.scss */
+/* line 135, ../sass/index.scss */
 .mainh2 {
   font-size: 1.4em;
   display: block;
   orphans: 3;
 }
 
-/* line 137, ../sass/index.scss */
+/* line 144, ../sass/index.scss */
 .circleImg {
   display: none;
   position: absolute;
@@ -1320,24 +1311,24 @@ body {
   background-color: #000;
 }
 
-/* line 147, ../sass/index.scss */
+/* line 154, ../sass/index.scss */
 .list {
   margin-left: 0;
 }
 
-/* line 151, ../sass/index.scss */
+/* line 158, ../sass/index.scss */
 .list li {
   display: list-item;
   padding: 0;
   line-height: 1.4em;
-  font-family: "OpenSans", "OpenSans_IE";
+  font-family: "OpenSans";
   padding-bottom: 32.24px;
   margin-left: -2.4em;
   list-style: none;
   padding-left: 2.5em;
 }
 
-/* line 163, ../sass/index.scss */
+/* line 170, ../sass/index.scss */
 .list li:before {
   content: "\003E \020";
   font-family: "consolas";
@@ -1350,7 +1341,7 @@ body {
   margin-bottom: .5em;
 }
 
-/* line 175, ../sass/index.scss */
+/* line 182, ../sass/index.scss */
 .list {
   border-top: #008cba solid 1px;
   display: inline-block;
@@ -1366,20 +1357,20 @@ body {
   overflow: visible;
 }
 
-/* line 190, ../sass/index.scss */
+/* line 197, ../sass/index.scss */
 .listHidden {
   display: none;
   margin-right: 0;
 }
 
-/* line 195, ../sass/index.scss */
+/* line 202, ../sass/index.scss */
 .tileContainer {
   display: block;
   margin: 0 auto;
   text-align: center;
 }
 
-/* line 201, ../sass/index.scss */
+/* line 208, ../sass/index.scss */
 .floatTitle {
   display: block;
   width: 13.8em;
@@ -1389,9 +1380,9 @@ body {
   margin-right: .769em;
 }
 
-/* line 213, ../sass/index.scss */
+/* line 220, ../sass/index.scss */
 .threeh2 {
-  font-family: "OpenSans", "OpenSans_IE";
+  font-family: "OpenSans";
   font-weight: 200;
   font-size: 1.4em;
   text-align: left;
@@ -1403,7 +1394,7 @@ body {
   margin-bottom: 0em;
 }
 
-/* line 227, ../sass/index.scss */
+/* line 234, ../sass/index.scss */
 .tile {
   display: inline-block;
   position: relative;
@@ -1416,7 +1407,7 @@ body {
   overflow: auto;
 }
 
-/* line 239, ../sass/index.scss */
+/* line 246, ../sass/index.scss */
 .listContainer {
   padding: 0;
   max-width: 759.48px;
@@ -1427,31 +1418,31 @@ body {
   min-height: 265px;
 }
 
-/* line 249, ../sass/index.scss */
+/* line 256, ../sass/index.scss */
 .tileInvis1 {
   display: none;
 }
 
-/* line 253, ../sass/index.scss */
+/* line 260, ../sass/index.scss */
 .tileInvis {
   display: none;
 }
 
-/* line 258, ../sass/index.scss */
+/* line 265, ../sass/index.scss */
 h3 {
   display: block;
   min-height: 3.5em;
   font-size: 1.05em;
   margin: 0;
   font-weight: 400;
-  font-family: "OpenSans", "OpenSans_IE";
+  font-family: "OpenSans";
   text-align: left;
 }
 
-/* line 270, ../sass/index.scss */
+/* line 277, ../sass/index.scss */
 p {
   text-align: left;
-  font-family: "OpenSans", "OpenSans_IE";
+  font-family: "OpenSans";
   font-size: 13px;
   line-height: 1.5em;
   margin: 1em 0;
@@ -1459,12 +1450,12 @@ p {
   margin: .5em 0;
 }
 
-/* line 280, ../sass/index.scss */
+/* line 287, ../sass/index.scss */
 .tileText {
   text-align: left;
 }
 
-/* line 284, ../sass/index.scss */
+/* line 291, ../sass/index.scss */
 .floatInfo {
   display: none;
   float: right;
@@ -1476,36 +1467,36 @@ p {
   text-align: left;
 }
 
-/* line 295, ../sass/index.scss */
+/* line 302, ../sass/index.scss */
 .infoText {
-  font-family: "OpenSans", "OpenSans_IE";
+  font-family: "OpenSans";
   font-size: 1.05em;
   line-height: 1.4em;
 }
 
-/* line 301, ../sass/index.scss */
+/* line 308, ../sass/index.scss */
 .mailLink {
   color: #008cba;
   text-decoration: underline;
 }
 
-/* line 306, ../sass/index.scss */
+/* line 313, ../sass/index.scss */
 .contactTitle {
   border-bottom: 1px solid #a8a8a8;
   padding-bottom: 31px;
 }
 
-/* line 311, ../sass/index.scss */
+/* line 318, ../sass/index.scss */
 .contactInfoTitle {
   color: #008cba;
 }
 
-/* line 315, ../sass/index.scss */
+/* line 322, ../sass/index.scss */
 #contactForm {
   margin-bottom: 16px;
 }
 
-/* line 319, ../sass/index.scss */
+/* line 326, ../sass/index.scss */
 .contactQuarter {
   display: inline-block;
   margin: 0;
@@ -1513,7 +1504,7 @@ p {
   margin-top: 12.32px;
 }
 
-/* line 326, ../sass/index.scss */
+/* line 333, ../sass/index.scss */
 .contactHalf {
   display: inline-block;
   margin: 0;
@@ -1521,14 +1512,14 @@ p {
   margin-top: 12.32px;
 }
 
-/* line 333, ../sass/index.scss */
+/* line 340, ../sass/index.scss */
 input {
-  font-family: "OpenSans", "OpenSans_IE";
+  font-family: "OpenSans";
   border: #a8a8a8 1px solid;
   padding-left: .5em;
 }
 
-/* line 339, ../sass/index.scss */
+/* line 346, ../sass/index.scss */
 h4 {
   display: block;
   font-size: 1.05em;
@@ -1537,54 +1528,54 @@ h4 {
   margin-top: 0px;
   margin-bottom: 0px;
   font-weight: 400;
-  font-family: "OpenSans", "OpenSans_IE";
+  font-family: "OpenSans";
   text-align: left;
 }
 
-/* line 351, ../sass/index.scss */
+/* line 358, ../sass/index.scss */
 textarea {
   margin: 0;
-  font-family: "OpenSans", "OpenSans_IE";
+  font-family: "OpenSans";
   border: #a8a8a8 1px solid;
   padding-left: .5em;
 }
 
-/* line 358, ../sass/index.scss */
+/* line 365, ../sass/index.scss */
 input:focus {
   border: 1px solid #008cba;
 }
 
-/* line 362, ../sass/index.scss */
+/* line 369, ../sass/index.scss */
 textarea:focus {
   border: 1px solid #008cba;
 }
 
-/* line 366, ../sass/index.scss */
+/* line 373, ../sass/index.scss */
 .contactAreaQuarter {
   box-sizing: border-box;
   width: 219px;
   height: 32.24px;
 }
 
-/* line 373, ../sass/index.scss */
+/* line 380, ../sass/index.scss */
 #message {
   width: 221px;
   min-height: 3.5em;
 }
 
-/* line 379, ../sass/index.scss */
+/* line 386, ../sass/index.scss */
 .displayToggle {
   display: none;
 }
 
-/* line 383, ../sass/index.scss */
+/* line 390, ../sass/index.scss */
 .button1 {
   float: left;
   color: #464646;
   height: 32.24px;
   width: 110px;
   border: 1px solid #a8a8a8;
-  font-family: "OpenSans", "OpenSans_IE";
+  font-family: "OpenSans";
   margin-left: calc(50% - 127px);
   line-height: 2em;
   margin-top: 1em;
@@ -1592,30 +1583,30 @@ textarea:focus {
   text-decoration: none;
 }
 
-/* line 397, ../sass/index.scss */
+/* line 404, ../sass/index.scss */
 .button1:hover {
   border: 1px solid #008cba;
   color: #008cba;
   cursor: pointer;
 }
 
-/* line 403, ../sass/index.scss */
+/* line 410, ../sass/index.scss */
 .firstTile {
   border-color: #008cba;
 }
 
-/* line 407, ../sass/index.scss */
+/* line 414, ../sass/index.scss */
 .firstList {
   border-color: #008cba;
 }
 
-/* line 411, ../sass/index.scss */
+/* line 418, ../sass/index.scss */
 img.form-success {
   max-height: 1.5rem;
   float: left;
 }
 
-/* line 415, ../sass/index.scss */
+/* line 422, ../sass/index.scss */
 div.form-success {
   text-align: left;
   line-height: 1rem;
@@ -1625,24 +1616,24 @@ div.form-success {
 /*--------------------------------
 --------------------------------*/
 @media (min-width: 0px) and (max-width: 534px) {
-  /* line 424, ../sass/index.scss */
+  /* line 431, ../sass/index.scss */
   .test {
     margin-top: -5em;
   }
 
-  /* line 428, ../sass/index.scss */
+  /* line 435, ../sass/index.scss */
   .headtext {
     display: none;
   }
 }
 @media (min-width: 535px) {
-  /* line 437, ../sass/index.scss */
+  /* line 444, ../sass/index.scss */
   .one {
     min-height: 300px;
     background-position: 60% 0;
   }
 
-  /* line 442, ../sass/index.scss */
+  /* line 449, ../sass/index.scss */
   .headh1 {
     text-align: left;
     min-width: 300px;
@@ -1653,7 +1644,7 @@ div.form-success {
     padding-left: 0;
   }
 
-  /* line 451, ../sass/index.scss */
+  /* line 458, ../sass/index.scss */
   .headh2 {
     text-align: left;
     min-width: 300px;
@@ -1665,17 +1656,17 @@ div.form-success {
   }
 }
 @media (min-width: 535px) {
-  /* line 463, ../sass/index.scss */
+  /* line 470, ../sass/index.scss */
   .secondTile {
     border-color: #008cba;
   }
 
-  /* line 467, ../sass/index.scss */
+  /* line 474, ../sass/index.scss */
   .one {
     min-height: 300px;
   }
 
-  /* line 471, ../sass/index.scss */
+  /* line 478, ../sass/index.scss */
   .headh1 {
     text-align: left;
     min-width: 300px;
@@ -1686,7 +1677,7 @@ div.form-success {
     padding-left: 0;
   }
 
-  /* line 480, ../sass/index.scss */
+  /* line 487, ../sass/index.scss */
   .headh2 {
     text-align: left;
     min-width: 300px;
@@ -1697,207 +1688,207 @@ div.form-success {
     padding-left: 0;
   }
 
-  /* line 489, ../sass/index.scss */
+  /* line 496, ../sass/index.scss */
   .two {
     min-height: 0px;
   }
 
-  /* line 493, ../sass/index.scss */
+  /* line 500, ../sass/index.scss */
   .list .liToggle {
     display: none;
   }
 
-  /* line 501, ../sass/index.scss */
+  /* line 508, ../sass/index.scss */
   .listHidden {
     display: inline-block;
   }
 
-  /* line 505, ../sass/index.scss */
+  /* line 512, ../sass/index.scss */
   .listContainer {
     min-width: 480px;
   }
 
-  /* line 509, ../sass/index.scss */
+  /* line 516, ../sass/index.scss */
   .floatTitle {
     margin-left: calc(50% - 15.85em);
   }
 
-  /* line 513, ../sass/index.scss */
+  /* line 520, ../sass/index.scss */
   .button1 {
     margin-left: calc(50% - 15.85em);
   }
 
-  /* line 517, ../sass/index.scss */
+  /* line 524, ../sass/index.scss */
   .tileInvis1 {
     display: inline-block;
   }
 
-  /* line 521, ../sass/index.scss */
+  /* line 528, ../sass/index.scss */
   #message {
     width: 474.24;
     min-height: 5.15em;
   }
 }
 @media (min-width: 784px) {
-  /* line 528, ../sass/index.scss */
+  /* line 535, ../sass/index.scss */
   .thirdTile {
     border-color: #008cba;
   }
 
-  /* line 535, ../sass/index.scss */
+  /* line 542, ../sass/index.scss */
   .firstList {
     border-color: #a8a8a8;
   }
 
-  /* line 539, ../sass/index.scss */
+  /* line 546, ../sass/index.scss */
   .one {
     min-height: 450px;
     background-size: cover;
     background-repeat: no-repeat;
   }
 
-  /* line 545, ../sass/index.scss */
+  /* line 552, ../sass/index.scss */
   .headh1, .headh2 {
     margin-left: calc(50% - 11.9em);
     max-width: 850px;
   }
 
-  /* line 551, ../sass/index.scss */
+  /* line 558, ../sass/index.scss */
   .headh2 {
     margin-left: calc(50% - 15.42em);
   }
 
-  /* line 558, ../sass/index.scss */
+  /* line 565, ../sass/index.scss */
   .threeh2list {
     text-align: left;
     border-top: 1px solid #008cba;
   }
 
-  /* line 563, ../sass/index.scss */
+  /* line 570, ../sass/index.scss */
   .listTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 100px;
   }
 
-  /* line 571, ../sass/index.scss */
+  /* line 578, ../sass/index.scss */
   .listContainer {
     min-width: 727.32px;
     min-height: 265px;
     padding: 0;
   }
 
-  /* line 577, ../sass/index.scss */
+  /* line 584, ../sass/index.scss */
   ul .displayToggle {
     display: list-item;
   }
 
-  /* line 590, ../sass/index.scss */
+  /* line 597, ../sass/index.scss */
   .tile {
     margin-right: 2.01em;
     display: inline-block;
   }
 
-  /* line 595, ../sass/index.scss */
+  /* line 602, ../sass/index.scss */
   .tileInvis {
     display: inline-block;
   }
 
-  /* line 599, ../sass/index.scss */
+  /* line 606, ../sass/index.scss */
   .floatTitle {
     margin-left: calc(50% - 23.74em);
   }
 
-  /* line 603, ../sass/index.scss */
+  /* line 610, ../sass/index.scss */
   .button1 {
     margin-left: calc(50% - 23.74em);
   }
 
-  /* line 607, ../sass/index.scss */
+  /* line 614, ../sass/index.scss */
   .floatInfo {
     display: inline-block;
   }
 
-  /* line 611, ../sass/index.scss */
+  /* line 618, ../sass/index.scss */
   .info {
     display: none;
   }
 
-  /* line 615, ../sass/index.scss */
+  /* line 622, ../sass/index.scss */
   .tileContainer {
     max-width: 763px;
   }
 
-  /* line 619, ../sass/index.scss */
+  /* line 626, ../sass/index.scss */
   .listTileContainer {
     max-width: 250px;
   }
 }
 @media (min-width: 1054px) {
-  /* line 626, ../sass/index.scss */
+  /* line 633, ../sass/index.scss */
   .one {
     background-position: 50% 0;
   }
 
-  /* line 630, ../sass/index.scss */
+  /* line 637, ../sass/index.scss */
   .headh1, .headh2 {
     margin-left: calc(50% - 16.35em);
   }
 
-  /* line 635, ../sass/index.scss */
+  /* line 642, ../sass/index.scss */
   .headh2 {
     margin-left: calc(50% - 22.35em);
   }
 
-  /* line 639, ../sass/index.scss */
+  /* line 646, ../sass/index.scss */
   .floatInfo {
     margin-top: 27px;
   }
 
-  /* line 646, ../sass/index.scss */
+  /* line 653, ../sass/index.scss */
   .topRow {
     padding-top: 15px;
   }
 
-  /* line 650, ../sass/index.scss */
+  /* line 657, ../sass/index.scss */
   #contactForm {
     margin-bottom: 16px;
   }
 
-  /* line 654, ../sass/index.scss */
+  /* line 661, ../sass/index.scss */
   .contactTitle {
     border-bottom: none;
   }
 
-  /* line 658, ../sass/index.scss */
+  /* line 665, ../sass/index.scss */
   .listContainer {
     min-height: 265px;
   }
 
-  /* line 662, ../sass/index.scss */
+  /* line 669, ../sass/index.scss */
   .floatTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 26em;
   }
 
-  /* line 668, ../sass/index.scss */
+  /* line 675, ../sass/index.scss */
   .button1 {
     margin-left: calc(50% - 30.98em);
   }
 
-  /* line 672, ../sass/index.scss */
+  /* line 679, ../sass/index.scss */
   .listTitle {
     margin-bottom: 100px;
   }
 
-  /* line 676, ../sass/index.scss */
+  /* line 683, ../sass/index.scss */
   .threeh2 {
     text-align: right;
     border-top: 1px solid #008cba;
   }
 
-  /* line 681, ../sass/index.scss */
+  /* line 688, ../sass/index.scss */
   .tileContainer {
     max-width: 1024px;
   }
