--- a/sass/index.scss
+++ b/sass/index.scss
@@ -153,6 +153,7 @@ body {
 
 .list {
 	margin-left:0;
+	padding-left:0;
 }
 
 .list li {
@@ -230,7 +231,6 @@ body {
     margin-bottom:0em;
 }
 
-
 .tile {
 	display:inline-block;
 	position:relative;
@@ -273,6 +273,21 @@ h3 {
 		
 }
 
+.catalog {
+	padding-bottom:0;
+	padding-top:.2em;
+	margin-top:2.8em;
+	background-color:rgba(00,55,73, .075);
+}
+
+.catalog div div {
+	//border-top:none;
+}
+
+.catalog div div h2 {
+	//border-top:none;
+}
+
 
 p {
 	text-align:left;	
@@ -282,6 +297,12 @@ p {
     margin: 1em 0;
     color: rgb(90,90,90);
     margin:.5em 0;
+}
+    
+.plarge {
+	font-size:1rem;
+	//padding-bottom:3.355rem;
+	//border-bottom: 1px solid $myblue;
 }
 
 .tileText {
@@ -464,6 +485,11 @@ margin: 1rem;
     padding-right:0;
     padding-left:0;
     }
+
+	.fullWidthTile {
+		width:calc(13.8em * 2 + 2.01em * 1); 
+		
+	}
 }
 
 @media (min-width: 535px) {  
@@ -502,7 +528,6 @@ margin: 1rem;
     }
     
     .list {
-	
 	}
 	
     .listHidden {
@@ -626,6 +651,11 @@ margin: 1rem;
      .listTileContainer {
     max-width:250px;
     }
+
+	.fullWidthTile {
+		width:calc(13.8em * 3 + 2.01em * 2); 
+		
+	}
 }
 
 @media (min-width:1054px) {
@@ -687,6 +717,10 @@ margin: 1rem;
 	
 	.tileContainer {
 	max-width:1024px;
+	}
+	
+	.marginFix {
+		margin-bottom:50px;
 	}
 }
 
